force-app/main/default/staticresources/python/Disappear/src/objects/AmgenProduct__c.object
<CustomObject>
    <fields>
        <fullName>Molecule_Name__c</fullName>
        <description>REF_NUMBER_1</description>
        <label>Molecule Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ODS_DrugId__c</fullName>
        <description>NUM_OCCURRENCE</description>
        <label>Drug Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_ProductName__c</fullName>
        <label>Old Product Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_AKA_s__c</fullName>
        <label>Product AKA&apos;s</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <externalId>true</externalId>
        <label>Siebel RowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CONFIGURATION_FLG</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isEnbrel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defect 33 - IFPRC is able to see Enbrel related Pubs</description>
        <label>isEnbrel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isLogicallyDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CONFIGURATION_FLG</description>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <label>Amgen Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ODS_DrugId__c</columns>
        <columns>NAME</columns>
        <columns>Old_ProductName__c</columns>
        <columns>Product_Description__c</columns>
        <columns>Product_AKA_s__c</columns>
        <columns>isLogicallyDeleted__c</columns>
        <columns>SiebelRowId__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>search_by_Drug_ID</fullName>
        <columns>ODS_DrugId__c</columns>
        <columns>NAME</columns>
        <columns>Product_Description__c</columns>
        <columns>Product_AKA_s__c</columns>
        <columns>isLogicallyDeleted__c</columns>
        <columns>Old_ProductName__c</columns>
        <columns>SiebelRowId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ODS_DrugId__c</field>
            <operation>equals</operation>
        </filters>
        <label>search by Drug ID</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>